--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,51 +1,6 @@
-/*----------------------------------------------------
-@File: Default Styles
-@Author: Rocky Ahmed
-@URL: http://wethemez.com
-Author E-mail: rockybd1995@gmail.com
-
-This file contains the styling for the actual theme, this
-is the file you need to edit to change the look of the
-theme.
----------------------------------------------------- */
-/*=====================================================================
-@Template Name: Builder Construction 
-@Author: Rocky Ahmed
-@Developed By: Rocky Ahmed
-@Developer URL: http://rocky.wethemez.com
-Author E-mail: rockybd1995@gmail.com
-
-@Default Styles
-
-Table of Content:
-01/ Variables
-02/ predefin
-03/ header
-04/ button
-05/ banner
-06/ breadcrumb
-07/ about
-08/ team
-09/ project 
-10/ price 
-11/ team 
-12/ blog 
-13/ video  
-14/ features  
-15/ career  
-16/ contact 
-17/ footer
-
-=====================================================================*/
-/*----------------------------------------------------*/
-/*font Variables*/
-/*Color Variables*/
-/*=================== fonts ====================*/
-/* @import url("https://fonts.googleapis.com/css?family=Heebo:300,400,700,900|Roboto:300,400,500,700"); */
-/*---------------------------------------------------- */
-/*----------------------------------------------------*/
 html {
   font-size: 14px;
+  scroll-behavior: smooth; 
 }
 .list {
   list-style: none;
@@ -619,7 +574,7 @@ h1 {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 2.4rem;
 }
 
 h3 {
@@ -731,6 +686,9 @@ h6 {
     padding-left: 0;
     padding-right: 0;
   }
+  h2 {
+    font-size: 1.9rem!important;
+  }
   .home_banner_area .banner_inner .banner_content {
     padding: 0 !important;
     width: 100%;
@@ -752,4 +710,12 @@ h6 {
 }
 .row .footer_inner {
   margin-bottom: 0 !important;
+}
+
+p { color: #222222!important; }
+
+
+
+.fsd-box-shadow-img {
+  box-shadow: 1px 1px 7px 0px rgba(153, 153, 153, 0.3);
 }
