--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -712,7 +712,7 @@ h6 {
   margin-bottom: 0 !important;
 }
 
-p { color: #222222!important; }
+p, ul, li, h2, h4 { color: #222222!important; }
 
 
 
